# repo-utilities

./: .gitignore  .pre-commit-config.yaml  .whitelist  environment.yaml  pyproject.toml
.github/workflows/: python.yaml
src/repo_utilities/: __init__.py  brew.py  choco.py  conda.py  download.py  ext.py  extract.py  git.py  gpg.py  session.py  temp.py  utils.py
src/repo_utilities/apt/: __init__.py  build_deb.py  build_meta.py  build_repo.py  cli.py
tests/: test_build_deb.py
